// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders nothing with no subject person 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "flex-end",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "width": 80,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingRight": 10,
          "textAlign": "right",
          "textAlignVertical": "center",
          "textTransform": "none",
          "width": 30,
        }
      }
    />
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 25,
          "left": 25,
          "right": 25,
          "top": 25,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "height": 24,
          "opacity": 1,
          "width": 24,
        }
      }
      testID="LikeIconButton"
    >
      <SvgMock
        color="#FF5532"
        fill="#FF5532"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginLeft": 20,
        "width": 40,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingRight": 10,
          "textAlign": "right",
          "textAlignVertical": "center",
          "textTransform": "none",
          "width": 30,
        }
      }
    >
      41702
    </Text>
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 25,
          "left": 25,
          "right": 25,
          "top": 25,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "opacity": 1,
        }
      }
      testID="CommentIconButton"
    >
      <SvgMock />
    </View>
  </View>
</View>
`;

exports[`with subject person onPress like button like -> unlike renders disabled heart button 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`with subject person onPress like button unlike -> like renders disabled heart button 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`with subject person renders 0 comments_count 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "flex-end",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "width": 80,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingRight": 10,
          "textAlign": "right",
          "textAlignVertical": "center",
          "textTransform": "none",
          "width": 30,
        }
      }
    />
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 25,
          "left": 25,
          "right": 25,
          "top": 25,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "height": 24,
          "opacity": 1,
          "width": 24,
        }
      }
      testID="LikeIconButton"
    >
      <SvgMock
        color="#FF5532"
        fill="#FF5532"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginLeft": 20,
        "width": 40,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingRight": 10,
          "textAlign": "right",
          "textAlignVertical": "center",
          "textTransform": "none",
          "width": 30,
        }
      }
    />
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 25,
          "left": 25,
          "right": 25,
          "top": 25,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "opacity": 1,
        }
      }
      testID="CommentIconButton"
    >
      <SvgMock />
    </View>
  </View>
</View>
`;

exports[`with subject person renders 0 likes_count 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "flex-end",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "width": 80,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingRight": 10,
          "textAlign": "right",
          "textAlignVertical": "center",
          "textTransform": "none",
          "width": 30,
        }
      }
    />
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 25,
          "left": 25,
          "right": 25,
          "top": 25,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "height": 24,
          "opacity": 1,
          "width": 24,
        }
      }
      testID="LikeIconButton"
    >
      <SvgMock
        color="#FF5532"
        fill="#FF5532"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginLeft": 20,
        "width": 40,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingRight": 10,
          "textAlign": "right",
          "textAlignVertical": "center",
          "textTransform": "none",
          "width": 30,
        }
      }
    >
      41702
    </Text>
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 25,
          "left": 25,
          "right": 25,
          "top": 25,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "opacity": 1,
        }
      }
      testID="CommentIconButton"
    >
      <SvgMock />
    </View>
  </View>
</View>
`;

exports[`with subject person renders for me 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "flex-end",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "width": 80,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingRight": 10,
          "textAlign": "right",
          "textAlignVertical": "center",
          "textTransform": "none",
          "width": 30,
        }
      }
    >
      72032
    </Text>
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 25,
          "left": 25,
          "right": 25,
          "top": 25,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "height": 24,
          "opacity": 1,
          "width": 24,
        }
      }
      testID="LikeIconButton"
    >
      <SvgMock
        color="#FF5532"
        fill="#FF5532"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginLeft": 20,
        "width": 40,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingRight": 10,
          "textAlign": "right",
          "textAlignVertical": "center",
          "textTransform": "none",
          "width": 30,
        }
      }
    >
      41702
    </Text>
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 25,
          "left": 25,
          "right": 25,
          "top": 25,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "opacity": 1,
        }
      }
      testID="CommentIconButton"
    >
      <SvgMock />
    </View>
  </View>
</View>
`;

exports[`with subject person renders for someone else 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "flex-end",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "width": 80,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingRight": 10,
          "textAlign": "right",
          "textAlignVertical": "center",
          "textTransform": "none",
          "width": 30,
        }
      }
    />
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 25,
          "left": 25,
          "right": 25,
          "top": 25,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "height": 24,
          "opacity": 1,
          "width": 24,
        }
      }
      testID="LikeIconButton"
    >
      <SvgMock
        color="#FF5532"
        fill="#FF5532"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginLeft": 20,
        "width": 40,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingRight": 10,
          "textAlign": "right",
          "textAlignVertical": "center",
          "textTransform": "none",
          "width": 30,
        }
      }
    >
      72032
    </Text>
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 25,
          "left": 25,
          "right": 25,
          "top": 25,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "opacity": 1,
        }
      }
      testID="CommentIconButton"
    >
      <SvgMock />
    </View>
  </View>
</View>
`;

exports[`with subject person renders prayer request liked 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "flex-end",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "width": 80,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingRight": 10,
          "textAlign": "right",
          "textAlignVertical": "center",
          "textTransform": "none",
          "width": 30,
        }
      }
    />
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 25,
          "left": 25,
          "right": 25,
          "top": 25,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "height": 24,
          "opacity": 1,
          "width": 24,
        }
      }
      testID="LikeIconButton"
    >
      <SvgMock
        color="#A97398"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginLeft": 20,
        "width": 40,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingRight": 10,
          "textAlign": "right",
          "textAlignVertical": "center",
          "textTransform": "none",
          "width": 30,
        }
      }
    >
      41702
    </Text>
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 25,
          "left": 25,
          "right": 25,
          "top": 25,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "opacity": 1,
        }
      }
      testID="CommentIconButton"
    >
      <SvgMock />
    </View>
  </View>
</View>
`;

exports[`with subject person renders prayer request not liked 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "flex-end",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "width": 80,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingRight": 10,
          "textAlign": "right",
          "textAlignVertical": "center",
          "textTransform": "none",
          "width": 30,
        }
      }
    />
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 25,
          "left": 25,
          "right": 25,
          "top": 25,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "height": 24,
          "opacity": 1,
          "width": 24,
        }
      }
      testID="LikeIconButton"
    >
      <SvgMock
        color="#505256"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginLeft": 20,
        "width": 40,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingRight": 10,
          "textAlign": "right",
          "textAlignVertical": "center",
          "textTransform": "none",
          "width": 30,
        }
      }
    >
      41702
    </Text>
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 25,
          "left": 25,
          "right": 25,
          "top": 25,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "opacity": 1,
        }
      }
      testID="CommentIconButton"
    >
      <SvgMock />
    </View>
  </View>
</View>
`;

exports[`with subject person renders when not liked 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "flex-end",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "width": 80,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingRight": 10,
          "textAlign": "right",
          "textAlignVertical": "center",
          "textTransform": "none",
          "width": 30,
        }
      }
    />
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 25,
          "left": 25,
          "right": 25,
          "top": 25,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "height": 24,
          "opacity": 1,
          "width": 24,
        }
      }
      testID="LikeIconButton"
    >
      <SvgMock
        color="#505256"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginLeft": 20,
        "width": 40,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingRight": 10,
          "textAlign": "right",
          "textAlignVertical": "center",
          "textTransform": "none",
          "width": 30,
        }
      }
    >
      41702
    </Text>
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 25,
          "left": 25,
          "right": 25,
          "top": 25,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "opacity": 1,
        }
      }
      testID="CommentIconButton"
    >
      <SvgMock />
    </View>
  </View>
</View>
`;
